# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/ability/form_fwk/form_fwk.gni")

module_output_path = "form_fwk/interfaces"

ohos_benchmarktest("BenchmarkTestForFormManager") {
  module_out_path = module_output_path
  sources = [ "form_manager_test.cpp" ]
  include_dirs = [

  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${form_fwk_path}:fmskit_native",
    "${form_fwk_path}:form_manager",
    "${form_fwk_path}:form_render_info",
    "${form_fwk_path}:form_utils",
    "${form_fwk_path}:form_common_info",
    "${form_fwk_path}/test/resource/benchmark/form_test_bundle:formTestWidget1",
    "${form_fwk_path}/test/resource/benchmark/ohos_test:copy_ohos_test",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "bundle_framework:appexecfwk_base",
    "cJSON:cjson",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "selinux_adapter:librestorecon",
    "benchmark:benchmark",
    "googletest:gtest_main",
  ]
}

group("benchmarktest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":BenchmarkTestForFormManager",
  ]
}
