# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/ability/form_fwk/form_fwk.gni")

##############################fuzztest##########################################
ohos_fuzztest("FormEditServiceFuzzTest") {
  module_out_path = form_fuzz_test_path

  fuzz_config_file = "${form_fwk_path}/test/fuzztest/formeditservice_fuzzer"

  include_dirs = [
    "${form_fwk_path}/interfaces/kits/native/include",
    "${form_fwk_path}/interfaces/inner_api/include",
    "${form_fwk_path}/services/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "${form_fwk_path}/services/src/ams_mgr/form_app_mgr_helper.cpp",
    "${form_fwk_path}/services/src/form_mgr/form_edit_service.cpp",
    "formeditservice_fuzzer.cpp"
  ]

  deps = [
    "${form_fwk_path}:fms_target",
    "${form_fwk_path}:fmskit_native",
    "${form_fwk_path}:form_manager",
    "${form_fwk_path}:libfms",
    "${form_fwk_path}:form_render_info",
    "${form_fwk_path}:form_utils",
    "${form_fwk_path}:form_common_info",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "data_share:datashare_provider",
    "ffrt:libffrt",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "relational_store:native_rdb",
    "samgr:samgr_proxy",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    ":FormEditServiceFuzzTest",
  ]
}
###############################################################################
