# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/ability/form_fwk/form_fwk.gni")

##############################fuzztest##########################################
ohos_fuzztest("FormHiSysEventBuilderFuzzTest") {
  module_out_path = form_fuzz_test_path

  fuzz_config_file = "${form_fwk_path}/test/fuzztest/formhisyseventbuilder_fuzzer"

  include_dirs = [
    "${form_fwk_path}/common/include",
    "${form_fwk_path}/interfaces/inner_api/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "formhisyseventbuilder_fuzzer.cpp",
    "${form_fwk_path}/common/src/form_hisysevent_wrapper.cpp",
  ]

  deps = [
    "${form_fwk_path}:fms_target",
  ]

  external_deps = [
    "hisysevent:libhisysevent",
    "hilog:libhilog",
    "c_utils:utils",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    ":FormHiSysEventBuilderFuzzTest",
  ]
}
###############################################################################
